<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_header_str" />

        <EditText
            android:id="@+id/regsiter_name_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/register_name_str"
            android:inputType="textPersonName"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/regsiter_passwd_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/register_password_str"
            android:inputType="textPassword"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="15dp"
            android:text="@string/register_btn_str" />
    </LinearLayout>

</ScrollView>