<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeheader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_layt_bg" >

    <TextView
        android:id="@+id/headertxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/signup_header"
        android:textColor="#084277"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headertxt"
        android:padding="20dp" >

        <EditText
            android:id="@+id/EditName"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="text"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black" >
        </EditText>

        <EditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@+id/EditName"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/text_email"
            android:inputType="text"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/EditPwd"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@+id/EditEmail"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/EditMobno"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@+id/EditPwd"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/text_mobno"
            android:inputType="number"
            android:maxLength="10"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/Editplace"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@+id/EditMobno"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="City"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_below="@+id/Editplace"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/action_item_btn"
            android:text="@string/btn_submit"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>