<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <EditText
        android:id="@+id/Edittitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/videofiletxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/browsevideo"
        android:layout_below="@+id/Edittitle"
        android:hint="Video file"
        android:singleLine="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/browsevideo"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Edittitle"
        android:layout_marginTop="12dp"
        android:background="@drawable/action_item_btn"
        android:src="@drawable/gal"
        android:text="@string/browse" />

    <EditText
        android:id="@+id/Editdescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/browsevideo"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_rect_shape"
        android:ems="10"
        android:hint="@string/description"
        android:gravity="top"
        android:inputType="text"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/submit"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_below="@+id/Editdescription"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/action_item_btn"
        android:text="@string/post" />

</RelativeLayout>