<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" 
    android:id="@+id/rel">

    <EditText
        android:id="@+id/Edittitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/Editdescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:layout_below="@+id/Edittitle"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_rect_shape"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:textColor="@color/black" />

    <!--
    <EditText
        android:id="@+id/Editimg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Editdescription"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/choose_img1"
        android:singleLine="true"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/galimage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/Editimg1"
        android:layout_alignTop="@+id/Editimg1"
        android:padding="2dp"
        android:src="@drawable/gal" />

    <EditText
        android:id="@+id/Editimg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Editimg1"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/choose_img2"
        android:singleLine="true"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/galimage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/Editimg2"
        android:layout_alignTop="@+id/Editimg2"
        android:padding="2dp" 
        android:src="@drawable/gal" />
    -->

    <EditText
        android:id="@+id/Textimg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/browseimg1"
        android:layout_below="@+id/Editdescription"
        android:hint="@string/image1"
        android:singleLine="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/browseimg1"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Editdescription"
        android:layout_marginTop="12dp"
        android:background="@drawable/action_item_btn"
        android:src="@drawable/gal"
        android:text="@string/browse" />
    
    
     <EditText
        android:id="@+id/Textimg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/browseimg2"
        android:layout_below="@+id/browseimg1"
        android:hint="@string/image2"
        android:singleLine="true"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/browseimg2"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/browseimg1"
        android:layout_marginTop="12dp"
        android:background="@drawable/action_item_btn"
        android:src="@drawable/gal"
        android:text="@string/browse" />

    <Button
        android:id="@+id/submit"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_below="@+id/browseimg2"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/action_item_btn"
        android:text="@string/post" />
    
    <!-- <Button
        android:id="@+id/addmore"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_below="@+id/submit"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/action_item_btn"
        android:text="Addmore" /> -->

</RelativeLayout>