<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/Edittitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black" >
            </EditText>

            <EditText
                android:id="@+id/Editdescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/round_rect_shape"
                android:layout_below="@+id/Edittitle"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:textColor="@color/black" />


           
            <EditText
                android:id="@+id/Editimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Editdescription"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Choose video file"
                android:singleLine="true"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/galimage"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignRight="@+id/Editimg"
                android:layout_alignTop="@+id/Editimg"
                android:src="@drawable/gal" />

          <!--   <ImageView
                android:id="@+id/choosenimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Editimg"
                android:src="@drawable/gal" />
 -->
            <Button
                android:id="@+id/submit"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_below="@+id/galimage"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/action_item_btn"
                android:text="@string/post" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>